# gbemulator

./: .gitignore  CMakeLists.txt  README.md
gb/include/: GBEmulator.h  macros.h  types.h
runtime/desktop/: main.cpp
tools/: build.ps1  build.sh
